# taq

./: Cargo.toml  LICENSE.txt  README.md
examples/: global.rs  interval.rs
src/: error.rs  futgen.rs  global.rs  job.rs  lib.rs  manager.rs  taq.rs  task.rs
src/handle/: ext.rs  mod.rs
