[package]
name = "taq"
description = "A simple Tokio task abstraction."
repository = "https://github.com/kalkronline/taq"
license = "MIT"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25", features = ["sync", "rt"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.25", features = ["full"]}
futures = "0.3.26"